Fixed nav color. Fix spacing again!

--- a/css/main.css
+++ b/css/main.css
@@ -77,23 +77,6 @@ nav ul li a {
     text-decoration: none;
 }
 
-nav {
-    float: right; 
-    padding: 75px 25px;
-}
-
-nav ul li{
-    display: inline-block;
-}
-
-nav ul li a {
-    color: #828282;
-    font-size: 18px;
-    text-transform: uppercase;
-    text-decoration: none;
-    padding-left: 80px; 
-}
-
 /***** WELCOME *****/
 
 #welcome {
